# higgshole

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: higgshole.service.example
docs/: deployment.md  mcp.md
docs/plans/: 2026-07-18-plan-1-foundation-and-provider-client.md  2026-07-18-plan-2-storage-metadata-and-budget.md  2026-07-18-plan-3-job-engine.md  2026-07-18-plan-4-web-interface.md  2026-07-18-plan-5-mcp-server-and-deployment.md
docs/specs/: 2026-07-18-higgshole-design.md
src/higgshole/: __init__.py  config.py  mcp_server.py
tests/: conftest.py  test_config.py  test_smoke.py
tests/budget/: test_estimator_image.py  test_estimator_video.py  test_gate.py  test_ledger.py
tests/catalog/: test_cache.py  test_validation.py
tests/deploy/: test_service_unit.py
tests/docs/: test_docs.py  test_readme.py
tests/jobs/: conftest.py  fakes.py  test_events.py  test_image_runner.py  test_invariants.py  test_references.py  test_resume.py  test_runner_base.py  test_status_mapping.py  test_video_poll.py  test_video_submit.py
tests/live/: gating.py  test_live_gate.py  test_reference_transport.py
tests/mcpserver/: test_api_client.py  test_asset_tools.py  test_server_entrypoint.py  test_tool_dispatch.py  test_tool_schemas.py
tests/orclient/: test_catalog_fetch.py  test_errors.py  test_images.py  test_key.py  test_types.py  test_videos.py
tests/store/: test_db_catalog_ledger.py  test_db_generations.py  test_db_schema.py  test_files.py  test_metadata_embed.py  test_metadata_probe.py  test_package.py  (+1 more)
(+50 files in other folders)
